<resources>
    <!--Strings activity_bluetooth -->
    <string name="txt_bt">Para empezar, conecta tu smartphone con el módulo HC05</string>
    <string name="txt_bt1">BiciMaps</string>


    <!--Strings activity_main -->

    <string name="app_name">BiciMaps</string>
    <string name="login">Entra con tu cuenta...</string>
    <string name="user">Usuario/Email</string>
    <string name="password">Contraseña</string>
    <string name="registro">¿Aún no estás registrado?</string>
    <string name="registro1">¡Regístrate ahora!</string>
    <string name="titulo">BiciMaps</string>
    <string name="boton">Entrar</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_credentials">1021921644445-2kvitkrglo3ft48tjlbk921n7cgrmer0.apps.googleusercontent.com</string>


    <!--Strings activity_registro -->

    <string name="reg_name">Nombre de usuario</string>
    <string name="reg_email">Email</string>
    <string name="new_account">Crear cuenta</string>
    <string name="back_to_main">¿Ya eres miembro? Login</string>

    <!--Strings activity_maps-->

    <string name="map_type">Map</string>
    <string name="mover">Mover</string>
    <string name="animar">Animar</string>
    <string name="pos">Pos</string>

    <string name="permission_denied_contacts">La utilización de la ubicación y de la tecnología Bluetooth es imprescindible para el correcto funcionamiento de la app. ¡Gracias y que disfrutes!</string>
</resources>
