<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ContenedorPpal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">


    <TextView android:id="@+id/TitTxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/titulo"
        android:textColor="#ffffff"
        android:fontFamily="@font/harleyscript"
        android:textSize="50sp" />

   <!-- <ImageView
        android:id="@+id/image_title"
        android:layout_marginLeft="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bici_icon" />
-->
    <TextView android:id="@+id/RegNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_name"
        android:textColor="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText android:id="@+id/RegNameEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView android:id="@+id/RegEmailTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_email"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText android:id="@+id/RegEmailEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView android:id="@+id/RegPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <EditText android:id="@+id/RegPassEdtTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/new_account"/>

    <TextView android:id="@+id/backtologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/back_to_main"
        android:textColor="#ffffff"/>

</LinearLayout>
